# rs-starter

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  cert.pem  docker-compose.yml  key.pem
resources/: log4rs.yaml
src/: lib.rs  main.rs  server.rs
src/core/: bootstrap_server.rs  builtin_handles.rs  mod.rs
src/mandelbrot/: mandelbrot_png.rs  mod.rs
src/middleware/: access.rs  access_filter.rs  mod.rs
src/middlewares/: access_filter.rs  mod.rs
src/mytools/: file_utils.rs
src/repository/: mongodb_repo.rs
src/services/: user_service.rs
src/utils/: file.rs  mod.rs  parse.rs
src/websocket/: lobby.rs  mod.rs  server.rs  ws.rs
static/: reset.css  site.css  style.css
static/vendors/: graphiql-2.0.7.min.css  graphiql-2.0.7.min.js
templates/: base.html  graphiql.html  index.html  speed.html
